# cookie-test1

./: Jenkinsfile  LICENSE  README.md  setup.cfg
cookie-test1/dataset/: make_dataset.py
cookie-test1/features/: build_features.py
cookie-test1/models/: model.py
cookie-test1/visualization/: visualize.py
docker/: Dockerfile.dev  Dockerfile.tests
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-cookie-test1_start.py2.ipynb
