[metadata]
name = cookie-test1
summary = No description
description-file =
    README.md
author = Pablo Orviz
author-email = orviz@ifca.unican.es
version = v1
license = MIT
home-page = http://github.com/orviz/cookie-test1
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    cookie-test1

[entry_points]

deepaas.model = 
    cookie-test1 = cookie-test1.models.model

